# PVR_torrent_client

./: Cargo.toml  README.md
src/: download.rs  hash.rs  http_tracker.rs  info_hash.rs  lib.rs  main.rs  peer.rs  peer_id.rs  piece.rs  torrent_file.rs  tracker_connection.rs  tracker_response.rs  tui.rs  writer.rs
src/peer_comunication/: bitfield.rs  handshake.rs  mod.rs  peer_connection.rs  peer_msg.rs
src/tracker_connection/: get_peers.rs  http_tracker.rs  mod.rs  tracker_response.rs  udp_tracker.rs
