[package]
name = "torrent_client"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "1.1.0"
serde = "1.0.215"
serde_urlencoded = "0.7.1"
anyhow = "1.0.93"
lava_torrent = "0.11.1"

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2.4"
rand = "0.8"
